NetBSD Problem Report #53159

From www@NetBSD.org  Thu Apr  5 18:14:17 2018
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 5DFF07A159
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  5 Apr 2018 18:14:17 +0000 (UTC)
Message-Id: <20180405181416.5DFED7A1DA@mollari.NetBSD.org>
Date: Thu,  5 Apr 2018 18:14:16 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/aarch64/include/db_machdep.h:132suspicious compare ?
X-Send-Pr-Version: www-1.0

>Number:         53159
>Category:       port-arm
>Synopsis:       src/sys/arch/aarch64/include/db_machdep.h:132suspicious compare ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    ryo
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Apr 05 18:15:00 +0000 2018
>Closed-Date:    Fri Apr 27 09:10:05 +0000 2018
>Last-Modified:  Fri Apr 27 09:20:00 +0000 2018
>Originator:     David Binderman
>Release:        cvs-20180405
>Organization:
>Environment:
>Description:
src/sys/arch/aarch64/include/db_machdep.h:132]: (style) Expression '(X & 0xffe00c00) != 0x3ca00c80' is always true.


Source code is

      (((insn) & 0xffe00c00) != 0x3ca00c80)) || /* register offset */

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-arm-maintainer->ryo
Responsible-Changed-By: ryo@NetBSD.org
Responsible-Changed-When: Fri, 27 Apr 2018 09:10:05 +0000
Responsible-Changed-Why:
mine


State-Changed-From-To: open->closed
State-Changed-By: ryo@NetBSD.org
State-Changed-When: Fri, 27 Apr 2018 09:10:05 +0000
State-Changed-Why:
fixed


From: "Ryo Shimizu" <ryo@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53159 CVS commit: src/sys/arch/aarch64/include
Date: Fri, 27 Apr 2018 09:05:26 +0000

 Module Name:	src
 Committed By:	ryo
 Date:		Fri Apr 27 09:05:26 UTC 2018

 Modified Files:
 	src/sys/arch/aarch64/include: db_machdep.h

 Log Message:
 remove suspicious compare, and cleanup complex conditionals.
 pointed out PR/53159 by dcb314, thanks.


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/sys/arch/aarch64/include/db_machdep.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.