remove suspicious compare, and cleanup complex conditionals. pointed out PR/53159 by dcb314, thanks.